--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="alternate" hreflang="en" href="/en/">
     <link rel="alternate" hreflang="zh" href="/zh/">
     <link rel="alternate" hreflang="x-default" href="/">
+    <link rel="stylesheet" href="/assets/css/common.css">
     <style>
         * {
             margin: 0;
@@ -987,3 +988,4 @@
             }, 100);
         });
     </script>
+    <script src="/assets/js/common.js"></script>
