--- a/about/index.html
+++ b/about/index.html
@@ -696,7 +696,7 @@
                     <div class="contact-info">
                         <div class="contact-item">
                             <span class="contact-item-icon">📧</span>
-                            <span>contact@selftalk.cn</span>
+                            <span>selftalkernow@outlook.com</span>
                         </div>
                         <div class="contact-item">
                             <span class="contact-item-icon">💬</span>
