--- a/index.html
+++ b/index.html
@@ -559,7 +559,16 @@
             display: none;
         }
     </style>
-</head>
+</head> 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T9ZN9KSK27"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T9ZN9KSK27');
+</script>
 <body>
     <!-- 语言切换器 -->
     <div class="language-switcher">
