feat: personalize about flow and add how it works

--- a/start/index.html
+++ b/start/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start Your Transformation - SelfTalk</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6928529142816465" crossorigin="anonymous"></script>
     <link rel="alternate" hreflang="en" href="/start/en/">
     <link rel="alternate" hreflang="zh" href="/start/zh/">
     <link rel="alternate" hreflang="x-default" href="/start/">
@@ -922,9 +923,9 @@
             <a href="/" class="logo" data-text-zh="自语力" data-text-en="SelfTalk">SelfTalk</a>
             <div class="nav-links">
                 <a href="/" data-text-zh="首页" data-text-en="Home">Home</a>
-                <a href="/how-it-works" data-text-zh="如何运作" data-text-en="How It Works">How It Works</a>
-                <a href="/success-stories" data-text-zh="成功故事" data-text-en="Success Stories">Success Stories</a>
-                <a href="/about" data-text-zh="关于我们" data-text-en="About Us">About Us</a>
+                <a href="/#how" data-text-zh="如何运作" data-text-en="How It Works">How It Works</a>
+                <a href="/#stories" data-text-zh="成功故事" data-text-en="Success Stories">Success Stories</a>
+                <a href="/about" data-text-zh="关于我" data-text-en="About Me">About Me</a>
                 <a href="/start" class="cta-button active" data-text-zh="开始改变" data-text-en="Start Now">Start Now</a>
             </div>
         </div>
